--- a/src/pages/resources/index.mdx
+++ b/src/pages/resources/index.mdx
@@ -6,13 +6,13 @@ import { ArticleCard, Column, ResourceCard, Row } from "gatsby-theme-carbon";
 
 ## Activities
 <Row>
-<Column noGutterSm={true} colMd={2} colMd={3} colLg={4}>
+<Column noGutterSm={true} colSm={2} colMd={2} colMd={3} colLg={4}>
 <ResourceCard
   href={'ibm.com'}
   subTitle={'Subtitle'}
   title={'Title'} />
 </Column>
-<Column noGutterSm={true} colMd={2} colMd={3} colLg={4}>
+<Column noGutterSm={true} colSm={2} colMd={2} colMd={3} colLg={4}>
 <ResourceCard
   href={'ibm.com'}
   subTitle={'Subtitle'}
@@ -22,7 +22,7 @@ import { ArticleCard, Column, ResourceCard, Row } from "gatsby-theme-carbon";
 
 ## Tools
 <Row>
-<Column noGutterSm={true} colMd={2} colMd={3} colLg={4}>
+<Column noGutterSm={true} colSm={2} colMd={2} colMd={3} colLg={4}>
 <ResourceCard
   href={'ibm.com'}
   subTitle={'Subtitle'}
