--- a/src/pages/basics/ml.mdx
+++ b/src/pages/basics/ml.mdx
@@ -15,13 +15,15 @@ Read time | *7 mins*
 
 # What is machine learning?
 
-Machine learning (ML) is a subset of artificial intelligence (AI), and is about getting an AI to accomplish tasks without being given specific instructions. In essence, it's about teaching machines how to learn!
+Machine learning (ML) is a subset of artificial intelligence (AI), that is all about getting an AI to accomplish tasks without being given specific instructions. In essence, it's about teaching machines how to learn!
 
-AI is simulated human cognition, so let's first think about how we learn. First, here's a simple question: Were we born with PhD level intelligence?
+AI is simulated human cognition, so let's first think about how we learn. Here's a simple question: were we born with PhD level intelligence?
 
-Of course not! At the beginning of our lives, we have little understanding of the world around us, but will grow to learn a lot. We learn through our senses by a combination of interacting being explicitly taught, finding patterns, and by trial-and-error. 
+Of course not! At the beginning of our lives, we have little understanding of the world around us, but over time we grow to learn a lot. We use our senses to take in data, and learn via a combination of interacting with the world around us, being explicitly taught certain things by others, finding patterns over time, and, of course, lots of trial-and-error. 
 
-AI learns in a similar way. At first, an AI doesn't know anything. ML gives AI the ability to learn about its world.
+AI learns in a similar way. When it’s first created, an AI knows nothing; ML gives AI the ability to learn about its world.
+
+Note: This guide makes comparisons to human intelligence to make it easier to understand the basic concepts of machine cognition. Organic thought is obviously different from artificial thought, both technically and philosophically, but philosophy is not the purpose of this document. Our goal is to equip provide the most digestible practical explanation of AI.
 
 # Why use machine learning?
 
@@ -31,14 +33,14 @@ AI is all about allowing a system to learn from examples rather than instruction
 
 There are a few distinct ways that machines can learn. In most cases, it'll fall under one of three buckets: supervised learning, unsupervised learning, and reinforcement learning. 
 
-Remember, we also have discrete learning styles. Sometimes we learn by watching videos and reading books. Sometimes we acquire knowledge based on hearing it in context. And, learning certain tasks requires a specific learning style. For example, we can always read about baseball, but if we want to hit a ball, there's no amount of reading that can substitute practicing swinging a bat. This separation in learning styles is the idea behind the different branches of ML.
+Remember that we as humans also have discrete learning styles. Sometimes we learn by watching videos and reading books; other times we acquire knowledge based on hearing it in context. There are also learning certain tasks that require a specific learning style. For example, we can always read about baseball, but if we want to hit a ball, there's no amount of reading that can substitute practicing swinging a bat. This separation in learning styles is the basic idea behind the different branches of ML.
 
 #### Supervised learning
-Supervised learning specializes in predicting the future. This is split further depending on whether it's predicting a thing or a number, called classification or regression, respectively. To understand how this works, you start with the data. All supervised learning algorithms need what’s called labeled data. This data is grouped into samples that have been tagged with one or more labels. This means, in applying supervised learning, you'll have to supply characteristics of a thing — or features — and then what that thing actually is. 
+Supervised learning specializes in predicting the future. This is split further depending on whether it's predicting a thing or a number, called classification or regression, respectively. To understand how this works, you start with the data. All supervised learning algorithms need what’s called labeled data. This data is grouped into samples that have been tagged with one or more labels. In other words, applying supervised learning requires you to tell your model 1. what the key characteristics of a thing are (called features); and 2. what that thing actually is. 
 
-### To demonstrate the former, let's take the example of teaching a toddler their shapes. 
+To demonstrate the former, let's take the example of teaching a child their shapes. 
 
-A classification problem might look something like this. You might have a shapes sheet which shows shapes and the name for each. 
+This is classification problem and starts by giving the child a shapes sheet, which shows shapes and the shape’s corresponding name. 
 
 <Row>
 <Column colLg={6}>
@@ -48,7 +50,9 @@ A classification problem might look something like this. You might have a shapes
 </Column>
 </Row>
 
-Your toddler would have a complete understanding if, say, all triangles had equal length sides. In order for your toddler to better understand triangles, you'd have to show her or him more examples. Doing this would build confidence in identifying triangular shapes.
+Circles are simple enough. Every circle is perfectly round (with infinite sides); this pieces of information is the key feature of a circle.
+
+Triangles are a little more complex. Based on the shapes sheet, your child might assume that all triangles have equal-length sides. In order for your child to better understand triangles, you'd have to show her or him more examples. Doing this would build their confidence in identifying triangular shapes.
 
 <Row>
 <Column colLg={6}>
@@ -58,14 +62,18 @@ Your toddler would have a complete understanding if, say, all triangles had equa
 </Column>
 </Row>
 
-Consider the other type of supervised learning: predicting a value. Assume you're trying to predict how much your salary should be. Suppose you could see everyone's salary, by role, experience, responsibilities, band level, and other relevant information, you could then see who else falls closest to you, and choose a salary closest to them. This is called a regression problem.
+After consuming these additional examples, your child would learn that the key feature of a triangle is having three sides, but also that those sides can be of varying lengths, unlike the square.
 
-Supervised learning is providing your AI with enough examples to make accurate predictions. A rule of thumb: the more examples, the better. 
+Now let’s consider the other type of supervised learning: predicting a value.
+
+Let’s say you're trying to predict how much your salary should be. Assume you could see everyone else’s pay, along with their roles, experience, responsibilities, band level, and other relevant information. You could then use this data to see whose situations are closest to yours (ie. people with similar roles, experience, responsibilities, etc.), and determine what your salary range should look like based on what those folks are being paid. This is called a regression problem.
+
+In a nutshell, supervised learning is about providing your AI with enough examples to make accurate predictions.
 
 #### Unsupervised learning
-Unsupervised learning finds commonalities and patterns in the input data. By extension, it's also commonly used to find outliers and anomalies. A majority of unsupervised learning is around clustering, that is, grouping the data by some set of characteristics or features. This is the same features mentioned in supervised learning, although unsupervised learning doesn't use labeled data.
+Unsupervised learning finds commonalities and patterns in the input data on its own. By extension, it's also commonly used to find outliers and anomalies in a dataset. Most unsupervised learning focuses on clustering—that is, grouping the data by some set of characteristics or features. This is the same “features” mentioned in supervised learning, although unsupervised learning doesn't use labeled data.
 
-Let’s use the example again of the toddler and the shapes. Suppose again you had a toddler group similar shapes together (Figure 3). The toddler will likely group, (or cluster), by shape, color, or size. This mode of learning is great for surfacing hidden connections or oddities in oceans of data.
+Let’s use the example again of the child and the shapes. Suppose again that you had a child group similar shapes together (Figure 3). The child will likely group, (or cluster), by shape, color, or size. This mode of learning is great for surfacing hidden connections or oddities in oceans of data.
 
 <Row>
 <Column colLg={12}>
@@ -76,7 +84,7 @@ Let’s use the example again of the toddler and the shapes. Suppose again you h
 </Row>
 
 #### Reinforcement learning
-Reinforcement learning is about rewarding positive behavior and punishing negative behavior. Over time, this can determine the optimal behavior for a particular environment. 
+Reinforcement learning is about rewarding positive behavior and punishing negative behavior. Over time, this can help your AI determine the optimal behavior for a particular environment or situation. 
 
 Think back to your childhood. When you were at school or at home, what happened when you did something bad? You probably got scolded, grounded, or a long lecture. What happened when you did something good?  Maybe you got praise or gifts. Rewarding the "right" behavior and punishing the "wrong" behavior is the cornerstone of reinforcement learning; that is you give your agent positive reinforcement for doing the right thing and negative reinforcement for the wrong things. 
 
@@ -84,16 +92,17 @@ The ingredients of a reinforcement learning problem are: 
  - an agent, 
  - its environment, 
  - a way for the agent to interact with its environment, and 
- - a way for the agent to get feedback on its actions within the 	environment (called a reward function or feedback function).
+ - a way for the agent to get feedback on its actions within the environment (called a reward function or feedback function).
 
-Where reinforcement learning gets interesting is when you have a limited environment. That is, your environment has is bounded by large but finite number of states — think most games like checkers, chess, Go, Rubik’s® Cubes, Pac-Man™, Galaga, etc. From here, the system can run hundreds, thousands, tens of thousands of iterations for every possible state to decide the best strategy for every scenario. 
+[AI example]
 
 ML isn't magic; it's math. Statistics, probability, linear algebra, and algorithms are what bring ML to life.
 
-Deep learning and neural networks
-Deep learning (DL) is a subset of machine learning, therefore everything you just learned still applies. The motivation is still trying to predict an output given an input; either supervised learning or unsupervised learning can be used. The key differences are performance and how it works. 
+#### Deep learning and neural networks
+Deep learning (DL) is a subset of machine learning, therefore everything you just learned still applies. The motivation is still trying to predict an output given a set of inputs, and either supervised learning or unsupervised learning can be used. The key differences are performance and how it works. 
 
-For now, just know that deep learning is machine learning that uses a NN with multiple hidden layers. If you want to even more, read [this] or watch [that].
+For now, just know that deep learning is machine learning that uses a neural network with multiple hidden layers. If you want to even more, read [this] or watch [that].
+
 
 <Row>
 <Column colLg={6}>
@@ -103,7 +112,7 @@ For now, just know that deep learning is machine learning that uses a NN with mu
 </Column>
 </Row>
 
-DL is remarkable at making deep connections within the data because of neural networks. Neural networks come in many shapes and sizes, but are essential for making deep learning work. They take an input, and perform several rounds of math on its features for each layer, until it predicts an output. (Deep breath, the rules of ML still apply.) DL uses a specific subset of NN in order to work, (e.g. convolutional NN, recurrent NN).
+DL is uniquely suited for making deep connections within the data because of neural networks. Neural networks come in many shapes and sizes, but are essential for making deep learning work. They take an input, and perform several rounds of math on its features for each layer, until it predicts an output. (Deep breath, the rules of ML still apply.) DL uses a specific subset of NN in order to work.
 
 The caveat to NN are that in order to be powerful, they need a lot of data and take a long time to train, thus can be expensive comparatively. Also because the human allows the machine to find deeper connections in the data, the process is near non-understandable and not very transparent.
 
