--- a/src/pages/basics/overview.mdx
+++ b/src/pages/basics/overview.mdx
@@ -15,13 +15,13 @@ import Feedback from "../../components/Feedback/Feedback"
 ## A short blurb will go here
 
 <Row>
-<Column noGutterSm={true} colMd={2} colMd={3} colLg={4}>
+<Column noGutterSm={true} colSm={2} colMd={2} colMd={3} colLg={4}>
 <ResourceCard
   href={'ibm.com'}
   subTitle={'Subtitle'}
   title={'Title'} />
 </Column>
-<Column noGutterSm={true} colMd={2} colMd={3} colLg={4}>
+<Column noGutterSm={true} colSm={2} colMd={2} colMd={3} colLg={4}>
 <ResourceCard
   href={'ibm.com'}
   subTitle={'Subtitle'}
@@ -31,7 +31,7 @@ import Feedback from "../../components/Feedback/Feedback"
 
 ## Articles
 <Row>
-<Column colMd={2} colMd={3} colLg={4}>
+<Column colSm={2} colMd={3} colLg={4}>
 <ArticleCard
   href={'/basics/ai'}
   title={'Artificial Intelligence'}
@@ -42,7 +42,7 @@ import Feedback from "../../components/Feedback/Feedback"
 
 </ArticleCard>
 </Column>
-<Column colMd={2} colMd={3} colLg={4}>
+<Column colSm={2} colMd={3} colLg={4}>
 <ArticleCard
   href={'/basics/ml'}
   title={'Machine Learning'}
@@ -53,7 +53,7 @@ import Feedback from "../../components/Feedback/Feedback"
 
 </ArticleCard>
 </Column>
-<Column colMd={2} colMd={3} colLg={4}>
+<Column colSm={2} colMd={3} colLg={4}>
 <ArticleCard
   href={'/basics/data'}
   title={'Data'}
@@ -65,3 +65,5 @@ import Feedback from "../../components/Feedback/Feedback"
 </ArticleCard>
 </Column>
 </Row>
+
+<Feedback title={'Blah'} />
