--- a/src/pages/ethics/index.mdx
+++ b/src/pages/ethics/index.mdx
@@ -18,13 +18,13 @@ import { AnchorLink, AnchorLinks, Column, PageDescription, ResourceCard, Row, Vi
 </AnchorLinks>
 
 <Row>
-<Column noGutterSm={true} colMd={2} colMd={3} colLg={4}>
+<Column noGutterSm={true} colSm={2} colMd={2} colMd={3} colLg={4}>
 <ResourceCard
   href={'ibm.com'}
   subTitle={'Subtitle'}
   title={'Title'} />
 </Column>
-<Column noGutterSm={true} colMd={2} colMd={3} colLg={4}>
+<Column noGutterSm={true} colSm={2} colMd={2} colMd={3} colLg={4}>
 <ResourceCard
   href={'ibm.com'}
   subTitle={'Subtitle'}
@@ -59,3 +59,7 @@ These focal areas provide an intentional framework for establishing an ethical f
 - [Explainability](/explainability)
 - [Fairness](/fairness)
 - [User Data Rights](/user-data-rights)
+
+These focal areas provide an intentional framework for establishing an ethical foundation for building and using AI systems. As much of what we do related to artificial intelligence is new territory for all of us, individuals and groups will need to further define criteria and metrics for evaluation to better allow for the detection and mitigation of any issues.
+
+The idea here is to start simple and iterate. We’re dependent on you to experiment, play, use, and break what you find here and send us your feedback. As you work with your team and others, please share this guide with them. If you have questions, comments or suggestions please email edethics@us.ibm.com.
