--- a/src/pages/basics/ai.mdx
+++ b/src/pages/basics/ai.mdx
@@ -12,7 +12,7 @@ import { AnchorLinks, PageDescription } from "gatsby-theme-carbon";
 
 Read time | *5 mins*
 
-# What is artificial intelligence?
+## What is artificial intelligence?
 
 Any system capable of simulating human intelligence and thought processes is said to have “Artificial Intelligence” (AI). 
 
@@ -26,7 +26,7 @@ The safest working definition is the study of making systems capable of simulati
 
 _Note: This guide makes comparisons to human intelligence to make it easier to understand the basic concepts of machine cognition. Organic thought is obviously different from artificial thought, both technically and philosophically, but philosophy is not the purpose of this document. Our goal is to equip provide the most digestible practical explanation of AI._
 
-# Why use AI?
+## Why use AI?
 
 AI can achieve higher quality outcomes faster than humanly possible. 
 
@@ -35,7 +35,7 @@ Today, AI is most often used to recognize patterns, make predictions, and provid
 These systems are meant to augment our own intelligence and maximize our confidence. In a growing number of fields, AI is serving as a companion for professionals to enhance performance and reduce the time required to become an expert. It will aid in the pursuit of knowledge, to further our expertise, and to improve the human condition. 
 
 
-#### Common AI use cases
+##### Common AI use cases
 AI is a powerful toolbox that has many applications in domains far and wide. The types of problems that the AI toolbox is best equipped to solve can be split into six core intents:
 
  1. Accelerate research and discovery
@@ -55,17 +55,17 @@ Some of the most common tasks AI performs — and their corresponding subfields 
  - Autonomously moving through spaces based on its senses (robotics)
  - Generally looking for patterns in heaps of data (machine learning)
 
-# How does AI work?
+## How does AI work?
 It depends on several factors. 
 
 Each of AI tasks mentioned has its own unique implementation, but it can be boiled down to roughly two approaches: specifying the rules that solve the problem versus giving the machine examples to find the pattern on its own.
 
-#### Rules based
+##### Rules based
 The rules-based approach uses algorithms — a sequence of unambiguous instructions used by computers to solve problems. It tells a computer precisely what steps to take to solve a problem or reach a goal. The chosen algorithm(s) determine how the AI will "think" about surfacing insights to address your problem space. Different algorithms have different goals, strengths, and weaknesses.  Choosing the right fit depends on your desired outcome and the
 
 ![AI](../../images/basics/ai/Image_1.png)
 
-#### Examples based
+##### Examples based
 The examples-based approach uses data to create models. 
 
 This data can take many forms: music, videos, weather conditions, user profiles, system logs, etc. Models are the result of training an AI on data to find patterns. This is akin to you studying before a big exam — you started with little to no understanding, so you ingested a bunch of study material so that you could go out into the world ready to apply your new knowledge. This way of problem solving is largely made possible by its subfield, machine learning. 
@@ -74,7 +74,7 @@ This is helpful in cases where specifying rigid rules (i.e. writing algorithms
 
 Some helpful people at MIT created a flowchart that guides you through whether or not the thing you're looking at is, in fact, AI. You can find it here.
 
-#### See for yourself
+##### See for yourself
  - [Watson Assistant](#)
  - [This person does not exist](https://thispersondoesnotexist.com/)
  - [Boston Dynamics robotics](https://www.youtube.com/watch?v=tf7IEVTDjng)
