--- a/src/pages/basics/ml.mdx
+++ b/src/pages/basics/ml.mdx
@@ -13,7 +13,7 @@ import { AnchorLinks, Column, PageDescription, Row, Video } from "gatsby-theme-c
 
 Read time | *7 mins*
 
-# What is machine learning?
+## What is machine learning?
 
 Machine learning (ML) is a subset of artificial intelligence (AI), that is all about getting an AI to accomplish tasks without being given specific instructions. In essence, it's about teaching machines how to learn!
 
@@ -25,11 +25,11 @@ AI learns in a similar way. When it’s first created, an AI knows nothing; ML g
 
 Note: This guide makes comparisons to human intelligence to make it easier to understand the basic concepts of machine cognition. Organic thought is obviously different from artificial thought, both technically and philosophically, but philosophy is not the purpose of this document. Our goal is to equip provide the most digestible practical explanation of AI.
 
-# Why use machine learning?
+## Why use machine learning?
 
 AI is all about allowing a system to learn from examples rather than instructions. ML is what makes that possible. Without ML, there's little point to using AI.
 
-# How does machine learning work?
+## How does machine learning work?
 
 There are a few distinct ways that machines can learn. In most cases, it'll fall under one of three buckets: supervised learning, unsupervised learning, and reinforcement learning. 
 
