--- a/src/pages/edt-ai/index.mdx
+++ b/src/pages/edt-ai/index.mdx
@@ -8,7 +8,7 @@ import { AnchorLink, AnchorLinks, Column, PageDescription, ResourceCard, Row, Vi
   Eventually this will be the blurb for EDT+AI, but until now these are just
   words to fill the space but honestly aren't all of our words just words to
   fill the gap between conception and infinite nothingness just some food for
-  thoguht happy monday
+  thought happy monday
 </PageDescription>
 
 <AnchorLinks>
@@ -25,7 +25,7 @@ import { AnchorLink, AnchorLinks, Column, PageDescription, ResourceCard, Row, Vi
 </Column>
 </Row>
 
-<Row>
+<Row style={{ padding-top: '20px'}}>
 <Column colSm={12} colMd={12} colLg={12}>
 
 <Video title="Test" vimeoId="235672083" />
