--- a/src/pages/ethics/accountability.mdx
+++ b/src/pages/ethics/accountability.mdx
@@ -7,7 +7,7 @@ import './ethics.scss';
 
 
 <Row className="opener">
-<Column colMd={6} colLg={7}>
+<Column colSm={3} colMd={6} colLg={7}>
 
 ### AI designers and developers are responsible for considering AI design, development, decision processes, and outcomes. Human judgment plays a role throughout a seemingly objective system of logical decisions. It is humans who write algorithms, who define success or failure, who make decisions about the uses of systems and who may be affected by a system’s outcomes.
 
@@ -17,7 +17,7 @@ Read time | **5 minutes**
 
 </Column>
 
-<Column offsetLg={1} colMd={2} colLg={2}>
+<Column colSm={1} offsetLg={1} colMd={2} colLg={2}>
 
 ![Accountability pictogram](../../images/ethics/accountability/Image_1.png)
 
@@ -116,4 +116,4 @@ _Fast Company7 on Stack Overflow’s Developer Survey Results 2018_
 </Column>
 </Row>
 
-![Sampling](../../images/ethics/accountability/Image_3.png)
+![Sampling](../../images/ethics/accountability/Image_2.png)
