--- a/src/pages/ethics/explainability.mdx
+++ b/src/pages/ethics/explainability.mdx
@@ -6,7 +6,7 @@ import { Aside, Column, Row } from "gatsby-theme-carbon";
 import './ethics.scss';
 
 <Row className="opener">
-<Column colMd={6} colLg={7}>
+<Column colSm={3} colMd={6} colLg={7}>
 
 ### AI should be designed for humans to easily perceive, detect, and understand its decision process.
 
@@ -16,7 +16,7 @@ Read time | **5 minutes**
 
 </Column>
 
-<Column offsetLg={1} colMd={2} colLg={2}>
+<Column colSm={1} offsetLg={1} colMd={2} colLg={2}>
 
 ![Explainability pictogram](../../images/ethics/explainability/Image_1.png)
 
