--- a/src/pages/ethics/fairness.mdx
+++ b/src/pages/ethics/fairness.mdx
@@ -6,7 +6,7 @@ import { Aside, Column, Row } from "gatsby-theme-carbon";
 import './ethics.scss';
 
 <Row className="opener">
-<Column colMd={6} colLg={7}>
+<Column colSm={3} colMd={6} colLg={7}>
 
 ### AI must be designed to minimize bias and promote inclusive representation.
 
@@ -15,7 +15,7 @@ import './ethics.scss';
 Read time | **5 mins**
 </Column>
 
-<Column offsetLg={1} colMd={2} colLg={2}>
+<Column colSm={1} offsetLg={1} colMd={2} colLg={2}>
 
 ![Fairness pictogram](../../images/ethics/fairness/Image_1.png)
 
