--- a/src/pages/ethics/index.mdx
+++ b/src/pages/ethics/index.mdx
@@ -33,7 +33,7 @@ import { AnchorLink, AnchorLinks, Column, PageDescription, ResourceCard, Row, Vi
 </Row>
 
 
-# Introduction
+## Introduction
 
 ### Ethical decision-making is not just another form of technical problem solving.
 As AI designers and developers, we hold a vast share of the collective influence and it is an imperative to understand the ethical considerations of our work. We are creating systems that will impact millions of people.
