--- a/src/pages/ethics/user-data-rights.mdx
+++ b/src/pages/ethics/user-data-rights.mdx
@@ -6,7 +6,7 @@ import { Aside, Column, Row } from "gatsby-theme-carbon";
 import './ethics.scss';
 
 <Row className="opener">
-<Column colMd={6} colLg={7}>
+<Column colSm={3} colMd={6} colLg={7}>
 
 ### AI must be designed to protect user data and preserve the user’s power over access and uses.
 
@@ -18,7 +18,7 @@ Read time | **5 minutes**
 
 </Column>
 
-<Column offsetLg={1} colMd={2} colLg={2}>
+<Column colSm={1} offsetLg={1} colMd={2} colLg={2}>
 
 ![User data rights pictogram](../../images/ethics/user-data-rights/Image_1.png)
 
