--- a/src/pages/ethics/value-alignment.mdx
+++ b/src/pages/ethics/value-alignment.mdx
@@ -6,7 +6,7 @@ import { Aside, Column, Row } from "gatsby-theme-carbon";
 import './ethics.scss';
 
 <Row className="opener">
-<Column colMd={6} colLg={7}>
+<Column colSm={3} colMd={6} colLg={7}>
 
 ### AI should be designed to align with the norms and values of your user group in mind.
 ### AI works alongside diverse, human interests. People make decisions based on any number of contextual factors, including their experiences, memories, upbringing, and cultural norms. These factors allow us to have a fundamental understanding of “right and wrong” in a wide range of contexts, at home, in the office, or elsewhere. This is second nature for humans, as we have a wealth of experiences to draw upon.
@@ -17,7 +17,7 @@ Read time | **5 minutes**
 
 </Column>
 
-<Column offsetLg={1} colMd={2} colLg={2}>
+<Column colSm={1} offsetLg={1} colMd={2} colLg={2}>
 
 ![Value alignment pictogram](../../images/ethics/value-alignment/Image_1.png)
 
