--- a/src/pages/fundamentals/index.mdx
+++ b/src/pages/fundamentals/index.mdx
@@ -6,7 +6,9 @@ hidden: false
 import { AnchorLink, AnchorLinks, Column, PageDescription, Row } from "gatsby-theme-carbon";
 
 <PageDescription>
+
   Artificial intelligence (AI) is a mystery and a wonder. It can help us solve humanity's most difficult problems. AI is also vastly misunderstood by most people. For some, AI is a magical black box with the intelligence of a PhD. It knows all about everything, you just bring your problems and, voilá, your problems are solved. For others, fears of AI uprisings, loss of human control and Terminator-like scenarios cloud their capability to understand the present utility of cognitive computing.
+
 </PageDescription>
 
 
@@ -18,10 +20,10 @@ import { AnchorLink, AnchorLinks, Column, PageDescription, Row } from "gatsby-th
   <AnchorLink href={"#"}>Design Factors or AI</AnchorLink>
   <AnchorLink href={"#"}>AI Ecosystem</AnchorLink>
   <AnchorLink href={"#"}>AI Conext Model</AnchorLink>
-  <AnchorLink href={"#"}>Questions to Ask Your Team</AnchorLink>
+  <AnchorLink href={"#"}>Questions for Your Team</AnchorLink>
 </AnchorLinks>
 
-# Introduction
+## Introduction
 
 When looking for ways to apply this cutting-edge, revolutionary technology, AI can not only dazzle, but can blind us as well. The more buzz and hype, the greater the pressure becomes to rush to create something using whatever new capabilities are presented to us. The benefit of moments like this is the opportunity to discover, experiment, and learn.
 
@@ -35,15 +37,15 @@ Each innovation provided a new context for communication and expanded (or change
 
 As a result, this changes the nature of our design considerations, some of which we take for granted based on the last 40+ years of software design. If we’ve moved past typing into a text field and pressing “submit,” what does it mean to design for human/machine relationships?
 
-# AI Design Foundations
+## AI Design Foundations
 
-## IBM's Principles for the AI Era
+### IBM's Principles for the AI Era
 
-#### AI augments human intelligence
+##### AI augments human intelligence
 
 Above all else, the purpose of our AI and cognitive systems is to augment human intelligence. Our technology, products, services and policies will be designed to enhance and extend human capability, expertise and potential. Cognitive systems will increasingly be embedded in the processes, systems, products and services by which business and society function – all of which will and should remain within human control.
 
-#### AI augments human intelligence
+##### AI augments human intelligence
 
 For cognitive systems to fulfill their potential, it is vital that people have confidence in their recommendations, judgments and uses. As designers and builders of cognitive systems, we must make clear.
 
@@ -51,54 +53,54 @@ For cognitive systems to fulfill their potential, it is vital that people have c
  - as well as transparency into the methods used to train those systems and solutions
  - clients own their own business models and intellectual property and 	that they can use AI and cognitive systems to enhance the	advantages they have built, often through years of experience
 
-### AI must engage in a relationship with humans
+#### AI must engage in a relationship with humans
 
 The economic and societal benefits of cognitive era will be difficult to realize if the human side of the equation is not supported. This is uniquely important with cognitive technology, which augments human intelligence and expertise and works collaboratively with humans. Therefore, we will work to help our users to acquire the skills and knowledge to engage safely, securely and effectively in a relationship with cognitive systems that builds an enduring trust between humans and machines.
 
-# Purpose, Value, and Trust
+## Purpose, Value, and Trust
 
 As Jared Spool says, design is the rendering of intent. This intent drives our outcomes. It’s the “why” behind what we do and the cause for us to affect change. Intentions require us to identify purposes and values for our efforts. Outcomes require going beyond ideas and create meaningful, trusted solutions for the people we serve.
 
 Design is more than a job or role—it’s an essential part of what makes us human. The value of design is to improve lives and leave the world better than we found it.
 
-## When designing for AI, our core intents are always rendered through the following lenses.
+### When designing for AI, our core intents are always rendered through the following lenses.
 
-#### Purpose
+##### Purpose
 The reason for the user to engage with the system. This will shift and change as the user and system grow with each other.
 
-#### Value
+##### Value
 The augmented capabilities provided by the system that tangibly improves a user’s life.
 
-#### Trust
+##### Trust
 The willingness of a user to invest in an emotional bond with the system. This trust is predicated on security of the system’s data, the feeling of human control, and the quality of the results the system provides.
 
-# Characteristics of AI
+## Characteristics of AI
 AI is the simulation of human thought processes in a computerized model. AI involves self-learning systems that use data mining, pattern recognition and natural language processing to mimic the way the human brain works.
 
 These systems learn at scale, reason with purpose and interact with humans naturally. What search is to information retrieval, AI is to better, more-informed decision-making. In short, they help human experts make better decisions.
 
-## We characterize cognitive systems as having four main qualities:
+### We characterize cognitive systems as having four main qualities:
 
-#### Understands
+##### Understands
 AI deeply understands its domain. They do this primarily through data – structured and unstructured, text-based or sensory – in context and meaning, at speed and volume.
 
-#### Reasons
+##### Reasons
 AI reasons towards specific goals. They have the ability to form hypotheses by making considered arguments and prioritized recommendations to help humans make better decisions.
 
-#### Learns
+##### Learns
 AI learns continuously through experience. They ingest and accumulate data and insight from every interaction at all times. They are trained, not programmed, by experts who enhance, scale and accelerate their expertise. Therefore, these systems get better over time.
 
-#### Interacts
+##### Interacts
 AI interacts naturally with people and systems. The interaction model of an AI is expected to flow unobtrusively while continuously building a sustainable relationship between itself and its users.
 
-# Design Factors for Artificial Intelligence
+## Design Factors for Artificial Intelligence
 When it comes to designing for AI, our focus must be unwavering in providing experiences that put the user above all else.
 
 AI isn’t about data, it’s about insights. Data is the fuel for the car, insights are the destinations. This is what people care about.
 
 AIs are capable of delivering more human-like interactions with people — based on the mode, form and quality each person prefers. They reason through the sum total of structured and unstructured data to find what really matters but this isn’t the full picture. Our solutions must primarily address user needs instead of being force-fit to accommodate technical capabilities or requirements.
 
-## The Relationship Age
+### The Relationship Age
 DL is remarkable at making deep connections within the data because of neural networks. Neural networks come in many shapes and sizes, but are essential for making deep learning work. They take an input, and perform several rounds of math on its features for each layer, until it predicts an output. (Deep breath, the rules of ML still apply.) DL uses a specific subset of NN in order to work, (e.g. convolutional NN, recurrent NN).
 
 
@@ -117,32 +119,32 @@ For AI to truly amplify humanity we must have and maintain meaningful relationsh
 
 To design authentic AI-based relationships requires us, as designers, to consciously understand ourselves before anything else. The more we understand of ourselves, the better we will be able to teach machines how to help our users be better.
 
-#### Knapp's Relational Development Model
+##### Knapp's Relational Development Model
 At this point, you might be asking yourself, “how do I design a relationship?” You wouldn’t be alone in this. For most people, forming and maintaining relationships is an autonomic process. We hardly give it a second thought.If you take a deeper look at the psychology behind relationships, you’ll probably find Knapp's Relational Development Model.
 
 Mark Knapp is a teaching professor at the University of Texas and is known for his works in nonverbal communication research. His relationship model explains how relationships grow and last and also how they end. This model is categorized into ten different stages which come under two interrelating stages “coming together” and “coming apart.” This helps to understand how a relationship progresses and deteriorates. For the purposes of our work with AI, we will focus on the “coming together” stages exclusively.
 
-#### Initiating
+##### Initiating
 A collection of first impressions and snap judgements are made. Even if these are inaccurate, they significantly influence if each party wants to continue to the next stage.
 
-#### Experimenting
+##### Experimenting
 If there’s a degree of mutual interest, the parties start exploring, looking for commonalities of interests, acquaintances and value.
 
-#### Intensifying
+##### Intensifying
 With enough in common, we look for reciprocal sharing by the other person that signals their interest in deepening the relationship.
 
-#### Integrating
+##### Integrating
 AI interacts naturally with people and systems. The interaction model of an AI is expected to flow unobtrusively while continuously building a sustainable relationship between itself and its users.
 
-#### Bonding
+##### Bonding
 Both parties are fully partnered through trust and mutual appreciation. The relationship is indefinite and only to be broken through a formal notice.
 
 ![The Relationship Age](../../images/fundamentals/Image_2.png)
 
-### So what do we need to consider when one person in a relationship is replaced by a machine?
+#### So what do we need to consider when one person in a relationship is replaced by a machine?
 By establishing tone and personality first, the system will have the means to endear itself to the user. As these systems are like “digital toddlers,” the means to make an emotional connection with its users will be essential. No one knows what it’s really like to have a full emotional bond with an AI outside of the movies or books. This is something for us all to aspire to.
 
-#### AI is a symbiotic relationship
+##### AI is a symbiotic relationship
 
 <Row>
 <Column colLg={6}>
@@ -154,22 +156,22 @@ By establishing tone and personality first, the system will have the means to en
 
 Human augments the machine and the machine augments the human.
 
-# AI Ecosystem
+## AI Ecosystem
 Artificial intelligences are probabilistic systems. This means that they are taught instead of being programmed. Since the systems are being taught, they must have context to be able to utilize their learnings. An AI needs this context to understand its place and provide value.
 
-#### Human
+##### Human
 The person whose needs are ultimately being served
 
-#### Machine
+##### Machine
 The system and its network of embodiments & connections
 
-#### Business
+##### Business
 The business needs and market goals to be served by the system
 
-#### World
+##### World
 The external factors that will both inform and educate the system
 
-#### Context
+##### Context
 The holistic view of a complete human experience. Includes emotional, physical, system, and domain knowledge.
 
 <Row>
@@ -180,7 +182,7 @@ The holistic view of a complete human experience. Includes emotional, physical, 
 </Column>
 </Row>
 
-# AI Context Model
+## AI Context Model
 
 <Row>
 <Column colLg={12}>
@@ -190,22 +192,22 @@ The holistic view of a complete human experience. Includes emotional, physical, 
 </Column>
 </Row>
 
-# Questions to ask your team
+## Questions to ask your team
 
-## Purpose, value, and trust considerations
+### Purpose, value, and trust considerations
 
-#### Purpose
+##### Purpose
  - What is your offering?
  - Where is the opportunity in your offering for artificial intelligence?
  - What problem is your offering going to solve?
 
-#### Value
+##### Value
  - What does it do for your users?
  - Can you justify the need for AI?
  - What kind of data sets can you provide to the system for it to utilize?
  - What benefit does AI bring to your solution?
 
-#### Trust
+##### Trust
  - Is this system going to be used to simulate domain knowledge, or as a companion to help with automation?
  - Are you intentionally developing the foundation for creating a meaningful relationship between human and machine?
  - How will you align the personality of your AI with associated brand values?
