--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -8,52 +8,52 @@ export default HomepageTemplate;
 <Row className="getting-started">
 <Column colMd={4} colLg={4} noGutterSm>
 
-#### Getting Started
+##### Getting Started
 
 </Column>
 
-<Column colMd={3} colLg={4} noGutterSm>
+<Column colMd={3} colLg={4} noGutterSm className={'temp'}>
     <ResourceCard
       className={'card'}
       title="Fundamentals"
       actionIcon="arrowRight"
-      aspectRatio="2:1"
+      aspectRatio="1:1"
       href="/fundamentals"
       dark />
 </Column>
-<Column colMd={3} colLg={4} noGutterSm>
+<Column colMd={3} colLg={4} noGutterSm className={'temp'}>
     <ResourceCard
       className={'card'}
       title="Ethics"
       actionIcon="arrowRight"
-      aspectRatio="2:1"
+      aspectRatio="1:1"
       href="/ethics/overview"
       dark />
 </Column>
-<Column colMd={3} colLg={4} noGutterSm>
+<Column colMd={3} colLg={4} noGutterSm className={'temp'}>
     <ResourceCard
       className={'card'}
       title="Basics"
       actionIcon="arrowRight"
-      aspectRatio="2:1"
+      aspectRatio="1:1"
       href="/basics/overview"
       dark />
 </Column>
-<Column colMd={3} colLg={4} noGutterSm>
+<Column colMd={3} colLg={4} noGutterSm className={'temp'}>
     <ResourceCard
       className={'card'}
       title="EDT+AI"
       actionIcon="arrowRight"
-      aspectRatio="2:1"
+      aspectRatio="1:1"
       href="/edt-ai"
       dark />
 </Column>
-<Column colMd={3} colLg={4} noGutterSm>
+<Column colMd={3} colLg={4} noGutterSm className={'temp'}>
     <ResourceCard
       className={'card'}
       title="Resources"
       actionIcon="arrowRight"
-      aspectRatio="2:1"
+      aspectRatio="1:1"
       href="/resources"
       dark />
 </Column>
