--- a/src/pages/basics/data.mdx
+++ b/src/pages/basics/data.mdx
@@ -12,9 +12,9 @@ import { AnchorLinks, PageDescription } from "gatsby-theme-carbon";
 
 Read time | *5 mins*
 
-# What is data?
+## What is data?
 
-#### Data is the fuel that powers artificial intelligence (AI).
+##### Data is the fuel that powers artificial intelligence (AI).
 
 Despite being critical to the AI equation, data often gets overlooked or minimized—often at enormous costs. It takes hard work to get data to the point where it’s usable for AI, but ultimately it comes down to hitting two big checkboxes: quantity and quality. 
 
@@ -22,8 +22,8 @@ Before taking the AI plunge, you need to have the right data and enough of it. T
 
 What follows are several of the key considerations with respect to collecting and using data.
  
-## Data collection
-### Sampling
+### Data collection
+#### Sampling
 
 > Why? To ensure your dataset matches the real world.
 
@@ -39,7 +39,7 @@ Assuming you could only pick four people, that’s probably the closest you coul
 
 In cases where the data wasn't properly sampled, you'll almost certainly come to the wrong conclusions about your population as a whole, meaning you're not giving your users what they need. Assuming that's the case, it’s irreparable and unable to reconcile without going out and getting more data about your population.
 
-### (Ease of) Acquiring data
+#### (Ease of) Acquiring data
 
 > Why? To know what it takes to actually get the data.
 
@@ -47,7 +47,7 @@ Data can take multiple different forms. Sometimes it's in a database, sometimes 
 
 Wrangling data across disparate sources can take a substantial amount of time, and more so if it requires generating or digitizing the data.
 
-### Data completeness
+#### Data completeness
 
 > Why? To make sure your data doesn’t have gaps.
 
@@ -65,8 +65,8 @@ In a contrived example, suppose you're making a mood tracker and you import a ta
 
 
 
-## Data organization
-### Consolidating data
+### Data organization
+#### Consolidating data
 
 > Why? To put it all in one place and make it work together.
 
@@ -74,13 +74,13 @@ You have your mountain of data pulled from several different piles digitized and
 
 For example, let's say you are trying to create a simple program to track your mood over time, along with the weather. Your journal entries are in a spreadsheet that you can export as a comma-separated value file (or .csv file). The weather data exists, but you'll have to use an API of some sort to pull it and pair it with your journal entries. Even though both piles of data exist and exist digitally, there is still work to pull them together in one place.
 
-### Consistent data
+#### Consistent data
 
 > Why? To make sure all of your data is saying the same thing.
 
 Training an AI is akin to training a toddler. That toddler's knowledge is dependent on you being consistent in your teaching. For example, you can't expect your toddler to ever master arithmetic if you say 1+1=2 and also teach 1+1=3 at the same time. You can expect the same out of your system.
 
-### Data richness
+#### Data richness
 
 > Why? To make sure that your data paints a vivid picture.
 
@@ -89,8 +89,8 @@ This means that you have enough data to get to the essence of what's really goin
 For example, let's take a famous ice cream sales and murder rate correlation. An increase of ice cream sales is shown to coincide with an increase in homicides. If we left our observation there, we might try to — naively — ban the sale of ice cream. Of course we'd have no success, considering how these occurrences are only correlated; the missing variable being temperature, as ice cream sales and murder rates spike in hotter temperatures. 
 
 
-## Data collection and organization
-### De-biased or bias transparent data
+### Data collection and organization
+#### De-biased or bias transparent data
 
 > Why? To make sure your AI doesn’t optimize inequity.
 
@@ -98,7 +98,7 @@ Bias — prejudice in favor of or against one thing, person, or group compared w
 
 It's worth noting explicitly right now, that even assuming data purity and removing all bias from it — which in many cases is nothing short of impossible — machine learning by its very nature is always a form of statistical discrimination. 
 
-## Takeaway
+### Takeaway
 When we get in our car, we think of the destination, rarely what's needed to get us there. Insights are the destination, data is the fuel. Consequently, before you set off on your AI journey, be mindful of what it takes to acquire enough useful and de-biased data.
 
 Even though it's important to plan for where we want to land, it's equally important to understand how to get there. Data is one half of the AI equation, and requires conscious consideration. 
